force-app/main/default/objects/RecordAssign__RecordAssignMember__c/fields/RecordAssign__Active__c.field-meta.xml
<CustomField>
    <fullName>RecordAssign__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Only Active members are considered and assigned</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>