force-app/main/default/objects/RecordAssign__RecordAssignMember__c/fields/RecordAssign__Limit__c.field-meta.xml
<CustomField>
    <fullName>RecordAssign__Limit__c</fullName>
    <inlineHelpText>Optional limit for total records allowed to be assigned during a specified frequency</inlineHelpText>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>