force-app/main/default/objects/RecordAssign__RecordAssignMember__c/fields/RecordAssign__RecordAssignConfiguration__c.field-meta.xml
<CustomField>
    <fullName>RecordAssign__RecordAssignConfiguration__c</fullName>
    <label>Record Assignment Configuration</label>
    <referenceTo>RecordAssign__RecordAssignConfiguration__c</referenceTo>
    <relationshipLabel>Record Assignment Members</relationshipLabel>
    <relationshipName>RecordAssignMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>