force-app/main/default/objects/RecordAssign__RecordAssignMember__c/fields/RecordAssign__Under_Limit__c.field-meta.xml
<CustomField>
    <fullName>RecordAssign__Under_Limit__c</fullName>
    <formula>OR(ISBLANK(RecordAssign__Limit__c), RecordAssign__Records_Assigned__c &lt; RecordAssign__Limit__c)</formula>
    <label>Under Limit</label>
    <type>Checkbox</type>
</CustomField>