force-app/main/default/objects/RecordAssign__RecordAssignMember__c/validationRules/RecordAssign__Chatter_User_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordAssign__Chatter_User_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(RecordAssign__User__r.Profile.UserType, &quot;CsnOnly&quot;)</errorConditionFormula>
    <errorDisplayField>RecordAssign__User__c</errorDisplayField>
    <errorMessage>Chatter user cannot be selected</errorMessage>
</ValidationRule>